--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -277,6 +277,7 @@
 				<div>[header] http_accept_language</div></div></td>
 			<td></td></tr>
 		<tr><td>language & locale</td><td class="c mono" id="lHash1"></td></tr>
+		<tr><td>timezone</td><td class="c mono" id="lHash0"></td></tr>
 		<tr><td>date/time & format</td><td class="c mono" id="lHash2"></td></tr>
 		<tr><td>geolocation</td><td class="c mono" id="lHash3"></td></tr>
 		<tr><td colspan="2" class="center">------</td></tr>
@@ -290,15 +291,16 @@
 				<input id="collapseL" class="toggle" type="checkbox" checked onchange="toggleitems(this, `L`)"/>
 				<label for="collapseL" class="lbl-toggle" id="labelL">&#9660; show details</label>
 		</td></tr>
-			<tr class="togL"><td></td><td class="sub4">language & locale</td></tr>
+		<tr class="togL"><td></td><td class="sub4">language & locale</td></tr>
 			<tr class="togL"><td>[navigator] languages</td><td class="c" id="nLanguages"></td></tr>
 			<tr class="togL"><td>[navigator] language</td><td class="c" id="nLanguage"></td></tr>
 			<tr class="togL"><td>[navigator] languages[0]</td><td class="c" id="nLanguages0"></td></tr>
 			<tr class="togL"><td>[Intl.PluralRules] locale</td><td class="c" id="localeIPR"></td></tr>
 			<tr class="togL"><td>[resolvedOptions] locale</td><td class="c" id="localeRO"></td></tr>
-		<tr class="togL"><td></td><td class="sub4">date/time & format</td></tr>
+		<tr class="togL"><td></td><td class="sub4">timezone</td></tr>
 			<tr class="togL"><td>timezone offsets</td><td class="c" id="tzOffsets"></td></tr>
 			<tr class="togL"><td>[resolvedOptions] timezone</td><td class="c" id="tzRO"></td></tr>
+		<tr class="togL"><td></td><td class="sub4">date/time & format</td></tr>
 			<tr class="togL"><td>system date/time</td><td class="c" id="dateSystem"></td></tr>
 			<tr class="togL"><td>toString</td><td class="c" id="dateString"></td></tr>
 			<tr class="togL"><td>[long] toLocaleString</td><td class="c" id="lngdateLS"></td></tr>
