--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -173,8 +173,9 @@
 		<tr><td>[css] browser</td><td id="fdResourceCss"></td></tr>
 		<tr><td>[error messages] browser</td><td class="c" id="fdError"></td></tr>
 		<tr><td><div class="ttip"><span class="icon">[ i ]</span>
-			<span class="ttxt"><b>mozInnerScreenX:</b><br>we could also use<br>mozGetAsFile<br>mozPaintCount<br>mozScreenX
-			<br>oscpu<br>scrollMaxX</span></div> &nbsp [feature detection] browser</td><td class="c" id="fdPaintCount"></td></tr>
+			<span class="ttxt"><b>mozInnerScreenX:</b><br>we could also use<br>mozGetAsFile<br>mozScreenX<br>oscpu
+			<br>scrollMaxX<br><span class="strike">mozPaintCount</span></span>
+			</div> &nbsp [feature detection] browser</td><td class="c" id="fdetect"></td></tr>
 		<tr><td>[resource://] browser</td><td class="c" id="fdResource"></td></tr>
 		<tr><td>[math] browser</td><td class="c" id="fdMath"></td></tr>
 		<tr><td><div class="ttip"><span class="icon">[ i ]</span>
