--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -90,12 +90,14 @@
 		<tr><td><div class="ttip"><span class="icon">[ i ]</span>
 			<span class="ttxt">range 500-2560</span></div>
 			&nbsp [css] screen resolution <sup>1</sup></td><td id="S"></td></tr>
+		<tr><td>[matchMedia] screen resolution</td><td class="c" id="ScrMM"></td></tr>
 		<tr><td>available resolution</td><td class="c" id="ScrAvail"></td></tr>
 		<tr><td>outer window</td><td class="c" id="WndOut"></td></tr>
 		<tr><td>inner window</td><td class="c" id="WndIn"></td></tr>
 		<tr><td><div class="ttip"><span class="icon">[ i ]</span>
 			<span class="ttxt">range 500-2560</span></div>
 			&nbsp [css] inner window <sup>1, 2</sup></td><td id="D"></td></tr>
+		<tr><td>[matchMedia] inner window</td><td class="c" id="WndInMM"></td></tr>
 		<tr><td>viewport <sup>3</sup></td><td class="c" id="Viewport"></td></tr>
 		<tr><td>[css] display-mode</td><td id="cssDM"></td></tr>
 		<tr><td>full screen</td><td class="c" id="fsState"></td></tr>
