--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -137,7 +137,8 @@
 		<tr><td colspan="2"><span class="no_color">code based on work by </span>
 			<a target="_blank" class="blue" href="https://arthuredelstein.github.io/tordemos/media-query-fingerprint.html">Arthur Edelstein</a> <sup>1</sup>
 			<span class="no_color">, </span>
-			<a target="_blank" class="blue" href="https://canvasblocker.kkapsner.de/test/screenSizeTest.html">kkapsner</a> <sup>2</sup>
+			<a target="_blank" class="blue" href="https://canvasblocker.kkapsner.de/test">kkapsner</a><span class="no_color"> & </span>
+			<a target="_blank" class="blue" href="https://github.com/kkapsner/CanvasBlocker">CanvasBlocker</a> <sup>2</sup>
 			<span class="no_color">, </span>
 			<a target="_blank" class="blue" href="https://matt.traudt.xyz/posts/how-css-alone-YF4ciVY6.html">Matt Traudt</a> <sup>3</sup>
 			<span class="no_color">, </span>
@@ -477,7 +478,7 @@
 		<tr><td>strokeText</td><td class="c strokeText" id="cnv10"></td></tr>
 		<tr><td>[webgl] readPixels</td><td class="c readPixels" id="cnv11"></td></tr>
 		<tr><td colspan="2"><span class="no_color">canvas code courtesy of </span>
-			<a target="_blank" class="blue" href="https://github.com/kkapsner">kkapsner</a><span class="no_color"> and </span>
+			<a target="_blank" class="blue" href="https://canvasblocker.kkapsner.de/test">kkapsner</a><span class="no_color"> & </span>
 			<a target="_blank" class="blue" href="https://github.com/kkapsner/CanvasBlocker">CanvasBlocker</a></td></tr>
 	</table>
 
@@ -546,7 +547,7 @@
 			<tr class="togD1"><td>bottom</td><td id="dr443"></td><td colspan="2" id="dr444"></td><td id="dr445"></td><td id="dr446"></td><td id="dr447"></td><td id="dr448"></td></tr>
 			<tr class="togD"><td colspan="8"></td></tr>
 		<tr><td colspan="8"><span class="no_color">domrect code courtesy of </span>
-			<a target="_blank" class="blue" href="https://github.com/kkapsner">kkapsner</a><span class="no_color"> and </span>
+			<a target="_blank" class="blue" href="https://canvasblocker.kkapsner.de/test">kkapsner</a><span class="no_color"> & </span>
 			<a target="_blank" class="blue" href="https://github.com/kkapsner/CanvasBlocker">CanvasBlocker</a></td></tr>
 	</table>
 
@@ -585,7 +586,7 @@
 		<tr class="togA"><td>OscillatorNode/DynamicsCompressor <sup>2</sup></td><td class="mono" id="audio3data"></td></tr>
 		<tr class="togA"><td colspan="2"></td></tr>
 		<tr><td colspan="2"><span class="no_color">audio code based on work by </span>
-			<a target="_blank" class="blue" href="https://github.com/kkapsner">kkapsner</a><span class="no_color"> and </span>
+			<a target="_blank" class="blue" href="https://canvasblocker.kkapsner.de/test">kkapsner</a><span class="no_color"> & </span>
 			<a target="_blank" class="blue" href="https://github.com/kkapsner/CanvasBlocker">CanvasBlocker</a> <sup>1</sup>
 			<span class="no_color"> and </span>
 			<a target="_blank" class="blue" href="https://audiofingerprint.openwpm.com/">openWPM</a> <sup>2</sup>
