--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -281,61 +281,66 @@
 		<tr><td><div>
 				<div class="btn-left"><button class="btn4" onClick="outputSection(`4`, `c`, `m`)">[ re-run tests ]</button></div>
 				<div>[header] http_accept_language</div></div></td>
-			<td></td></tr>
+			<td id="lang0"></td></tr>
 		<tr><td>language & locale</td><td class="c mono" id="lHash1"></td></tr>
 		<tr><td>timezone</td><td class="c mono" id="lHash0"></td></tr>
 		<tr><td>date/time & format</td><td class="c mono" id="lHash2"></td></tr>
 		<tr><td>geolocation</td><td class="c mono" id="lHash3"></td></tr>
-		<tr><td colspan="2" class="center">------</td></tr>
-		<tr><td>[dtd] app language <sup>1</sup></td><td class="c" id="appLang2"></td></tr>
-		<tr><td>[dtd nullprinciple] app language <sup>2</sup></td><td class="c" id="appLang3"></td></tr>
-		<tr><td>[dom.properties] app language <sup>3</sup></td><td class="c" id="appLang1"></td></tr>
-		<tr><td>[MediaDocument.properties] app language <sup>3</sup></td><td class="c" id="appLang4"></td></tr>
-		<tr><td>[xmlparser.properties] app language <sup>3</sup></td><td class="c" id="appLang5"></td></tr>
+		<tr><td colspan="2" class="center">--- app language leaks ---</td></tr>
+		<tr><td>dtd <sup>1</sup></td><td class="c" id="appLang2"></td></tr>
+		<tr><td>dtd nullprinciple <sup>2</sup></td><td class="c" id="appLang3"></td></tr>
+		<tr><td>dom.properties <sup>3</sup></td><td class="c" id="appLang1"></td></tr>
+		<tr><td>MediaDocument.properties <sup>3</sup></td><td class="c" id="appLang4"></td></tr>
+		<tr><td>xmlparser.properties <sup>3</sup></td><td class="c" id="appLang5"></td></tr>
 		<!--details-->
 		<tr><td colspan="8" class="showhide">
 				<input id="collapseL" class="toggle" type="checkbox" checked onchange="toggleitems(this, `L`)"/>
 				<label for="collapseL" class="lbl-toggle" id="labelL">&#9660; show details</label>
 		</td></tr>
+		<!--lang-->
 		<tr class="togL"><td></td><td class="sub4">language & locale</td></tr>
-			<tr class="togL"><td>[navigator] languages</td><td class="c" id="nLanguages"></td></tr>
-			<tr class="togL"><td>[navigator] language</td><td class="c" id="nLanguage"></td></tr>
-			<tr class="togL"><td>[navigator] languages[0]</td><td class="c" id="nLanguages0"></td></tr>
-			<tr class="togL"><td>[Intl.PluralRules] locale</td><td class="c" id="localeIPR"></td></tr>
-			<tr class="togL"><td>[resolvedOptions] locale</td><td class="c" id="localeRO"></td></tr>
+			<tr class="togL"><td>[navigator] languages</td><td class="c" id="lang1"></td></tr>
+			<tr class="togL"><td>[navigator] language</td><td class="c" id="lang2"></td></tr>
+			<tr class="togL"><td>[navigator] languages[0]</td><td class="c" id="lang3"></td></tr>
+			<tr class="togL"><td>[Intl.PluralRules] locale</td><td class="c" id="lang4"></td></tr>
+			<tr class="togL"><td>[resolvedOptions] locale</td><td class="c" id="lang5"></td></tr>
+		<!--tz-->
 		<tr class="togL"><td></td><td class="sub4">timezone</td></tr>
-			<tr class="togL"><td>timezone offsets</td><td class="c" id="tzOffsets"></td></tr>
-			<tr class="togL"><td>[resolvedOptions] timezone</td><td class="c" id="tzRO"></td></tr>
+			<tr class="togL"><td>timezone offsets</td><td class="c" id="tz1"></td></tr>
+			<tr class="togL"><td>[resolvedOptions] timezone</td><td class="c" id="tz2"></td></tr>
+		<!--dtf-->
 		<tr class="togL"><td></td><td class="sub4">date/time & format</td></tr>
-			<tr class="togL"><td>system date/time</td><td class="c" id="dateSystem"></td></tr>
-			<tr class="togL"><td>toString</td><td class="c" id="dateString"></td></tr>
-			<tr class="togL"><td>[long] toLocaleString</td><td class="c" id="lngdateLS"></td></tr>
-			<tr class="togL"><td>[long] toLocaleDateString</td><td class="c" id="lngdateLDS"></td></tr>
-			<tr class="togL"><td>[long] toLocaleTimeString</td><td class="c" id="lngdateLTS"></td></tr>
-			<tr class="togL"><td>[long] Intl.DateTimeFormat</td><td class="c" id="lngdateIDTF"></td></tr>
-			<tr class="togL"><td>[formatToParts] Intl.DateTimeFormat</td><td class="c" id="dateFTP"></td></tr>
-			<tr class="togL"><td>toGMTString</td><td class="c" id="dateGMT"></td></tr>
-			<tr class="togL"><td>toUTCString</td><td class="c" id="dateUTC"></td></tr>
-			<tr class="togL"><td>toLocaleString</td><td class="c" id="dateLS"></td></tr>
-			<tr class="togL"><td>[Typed Array] toLocaleString</td><td class="c" id="dateTAtoLS"></td></tr>
-			<tr class="togL"><td>toLocaleDateString</td><td class="c" id="dateLDS"></td></tr>
-			<tr class="togL"><td>Intl.DateTimeFormat</td><td class="c" id="dateIDTF"></td></tr>
-			<tr class="togL"><td>toLocaleTimeString</td><td class="c" id="dateLTS"></td></tr>
-			<tr class="togL"><td>toTimeString</td><td class="c" id="dateTS"></td></tr>
-			<tr class="togL"><td>[formatToParts] Intl.NumberFormat</td><td class="c" id="numFTP"></td></tr>
-			<tr class="togL"><td>[resolvedOptions] hourCycle</td><td class="c" id="hourRO"></td></tr>
-			<tr class="togL"><td>Intl.RelativeTimeFormat</td><td class="c" id="dateIRTF"></td></tr>
-			<tr class="togL"><td>[formatToParts] Intl.RelativeTimeFormat</td><td class="c" id="dateIRTFFTP"></td></tr>
-			<tr class="togL"><td>[BigInt] toLocaleString </td><td class="c" id="numTLS"></td></tr>
-			<tr class="togL"><td>[resolvedOptions] calendar</td><td class="c" id="calendarRO"></td></tr>
-			<tr class="togL"><td>[resolvedOptions] numberingSystem</td><td class="c" id="numsysRO"></td></tr>
+			<tr class="togL"><td>system date/time</td><td class="c" id="dtf1"></td></tr>
+			<tr class="togL"><td>toString</td><td class="c" id="dtf2"></td></tr>
+			<tr class="togL"><td>[long] toLocaleString</td><td class="c" id="dtf3"></td></tr>
+			<tr class="togL"><td>[long] toLocaleDateString</td><td class="c" id="dtf4"></td></tr>
+			<tr class="togL"><td>[long] toLocaleTimeString</td><td class="c" id="dtf5"></td></tr>
+			<tr class="togL"><td>[long] Intl.DateTimeFormat</td><td class="c" id="dtf6"></td></tr>
+			<tr class="togL"><td>[formatToParts] Intl.DateTimeFormat</td><td class="c" id="dtf7"></td></tr>
+			<tr class="togL"><td>toGMTString</td><td class="c" id="dtf8"></td></tr>
+			<tr class="togL"><td>toUTCString</td><td class="c" id="dtf9"></td></tr>
+			<tr class="togL"><td>toLocaleString</td><td class="c" id="dtf10"></td></tr>
+			<tr class="togL"><td>[Typed Array] toLocaleString</td><td class="c" id="dtf11"></td></tr>
+			<tr class="togL"><td>toLocaleDateString</td><td class="c" id="dtf12"></td></tr>
+			<tr class="togL"><td>Intl.DateTimeFormat</td><td class="c" id="dtf13"></td></tr>
+			<tr class="togL"><td>toLocaleTimeString</td><td class="c" id="dtf14"></td></tr>
+			<tr class="togL"><td>toTimeString</td><td class="c" id="dtf15"></td></tr>
+			<tr class="togL"><td>[resolvedOptions] hourCycle</td><td class="c" id="dtf16"></td></tr>
+			<tr class="togL"><td>Intl.RelativeTimeFormat</td><td class="c" id="dtf17"></td></tr>
+			<tr class="togL"><td>[formatToParts] Intl.RelativeTimeFormat</td><td class="c" id="dtf18"></td></tr>
+			<tr class="togL"><td>[formatToParts] Intl.NumberFormat</td><td class="c" id="dtf19"></td></tr>
+			<tr class="togL"><td>[BigInt] Intl.NumberFormat</td><td class="c" id="dtf20"></td></tr>
+			<tr class="togL"><td>[BigInt] toLocaleString </td><td class="c" id="dtf21"></td></tr>
+			<tr class="togL"><td>[resolvedOptions] calendar</td><td class="c" id="dtf30"></td></tr>
+			<tr class="togL"><td>[resolvedOptions] numberingSystem</td><td class="c" id="dtf31"></td></tr>
+		<!--geo-->
 		<tr class="togL"><td></td><td class="sub4">geolocation</td></tr>
 			<tr class="togL"><td><div class="ttip"><span class="icon">[ i ]</span>
 				<span class="ttxt">geo.enabled</span></div>
-				&nbsp [api] geolocation</td><td class="c" id="nGeolocation"></td></tr>
+				&nbsp [api] geolocation</td><td class="c" id="geo1"></td></tr>
 			<tr class="togL"><td><div class="ttip"><span class="icon">[ i ]</span>
 				<span class="ttxtb">permissions.default.geo</span></div>
-				&nbsp [permission] geolocation</td><td class="c" id="pGeolocation"></td></tr>
+				&nbsp [permission] geolocation</td><td class="c" id="geo2"></td></tr>
 		<tr class="togL"><td colspan="2"></td></tr>
 		<!--credits-->
 		<tr><td colspan="2"><span class="no_color">app language code based on work by Alex Catarineu </span>
