--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -328,9 +328,10 @@
 			<tr class="togL"><td>[resolvedOptions] hourCycle</td><td class="c" id="dtf16"></td></tr>
 			<tr class="togL"><td>Intl.RelativeTimeFormat</td><td class="c" id="dtf17"></td></tr>
 			<tr class="togL"><td>[formatToParts] Intl.RelativeTimeFormat</td><td class="c" id="dtf18"></td></tr>
-			<tr class="togL"><td>[formatToParts] Intl.NumberFormat</td><td class="c" id="dtf19"></td></tr>
-			<tr class="togL"><td>[BigInt] Intl.NumberFormat</td><td class="c" id="dtf20"></td></tr>
-			<tr class="togL"><td>[BigInt] toLocaleString </td><td class="c" id="dtf21"></td></tr>
+			<tr class="togL"><td>Intl.NumberFormat</td><td class="c" id="dtf19"></td></tr>
+			<tr class="togL"><td>[formatToParts] Intl.NumberFormat</td><td class="c" id="dtf20"></td></tr>
+			<tr class="togL"><td>[BigInt] Intl.NumberFormat</td><td class="c" id="dtf21"></td></tr>
+			<tr class="togL"><td>[BigInt] toLocaleString </td><td class="c" id="dtf22"></td></tr>
 			<tr class="togL"><td>[resolvedOptions] calendar</td><td class="c" id="dtf30"></td></tr>
 			<tr class="togL"><td>[resolvedOptions] numberingSystem</td><td class="c" id="dtf31"></td></tr>
 		<!--geo-->
