--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -437,9 +437,9 @@
 				<div class="nav-up"><a href="#cookies">&#9650;</a></div>
 				<div class="nav-down"><a href="#canvas">&#9660;</a></div></div>
 		</th></tr></thead>
-		<tr><td><div>
-				<div class="btn-left"><button class="btn7" onClick="outputSection(`7`, `c`, `m`)">[ re-run tests ]</button></div>
-				<div>[navigator] hardwareConcurrency</div></div></td><td class="c" id="nHardwareConcurrency"></td></tr>
+		<tr><td><div><div class="btn-left"><button class="btn7" onClick="outputSection(`7`, `c`, `m`)">[ re-run tests ]</button></div>
+				<div><div class="ttip"><span class="icon">[ i ]</span><span class="ttxtb">dom.maxHardwareConcurrency</span></div>
+				&nbsp [navigator] hardwareConcurrency</div></div></td><td class="c" id="nHardwareConcurrency"></td></tr>
 		<tr><td><div class="ttip"><span class="icon">[ i ]</span>
 			<span class="ttxt">dom.gamepad.enabled</span></div>
 			&nbsp [api] gamepad</td><td class="c" id="nGetGamepads"></td></tr>
@@ -769,7 +769,9 @@
 		</th></tr></thead>
 		<tr><td><div>
 				<div class="btn-left"><button class="btn18" onClick="outputSection(`18`, `c`, `m`)">[ re-run tests ]</button></div>
-				<div>[navigator] clipboard</div></div></td><td class="c" id="nClipboard"></td></tr>
+				<div><div class="ttip"><span class="icon">[ i ]</span><span class="ttxt">beacon.enabled</span></div>
+				&nbsp [navigator] beacon</div></div></td><td class="c" id="nBeacon"></td></tr>
+		<tr><td>[navigator] clipboard</td><td class="c" id="nClipboard"></td></tr>
 		<tr><td><div class="ttip"><span class="icon">[ i ]</span>
 			<span class="ttxtb">dom.IntersectionObserver.enabled</span></div>
 			&nbsp [api] intersection observer</td><td class="c" id="intObserver"></td></tr>
