--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -44,7 +44,7 @@
 			<iframe id="appLang_4"></iframe>
 		</div>
 		<!-- domrect -->
-		<iframe id="drect" class="offscreen"></iframe>
+		<div id="drect" class="offscreen"></div>
 		<!-- default font size -->
 		<div class="offscreen">
 			<div class="normalized">
