--- a/iframes/domrect.html
+++ b/iframes/domrect.html
@@ -2,6 +2,9 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <head>
 <style>
+.hidden {display: none;}
+.offscreen {position: absolute; top: -2000%;}
+
 #insideDOMRect{
 	white-space: nowrap;
 	color:#5B5B5B;
@@ -49,5 +52,6 @@
 </select>
 <progress class="testRect" id="rect4">test</progress>
 <button class="testRect" id="rect5"></button>
+<div id="rect6">test</div>
 </body>
 </html>
