--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -816,6 +816,8 @@
 	<!-- first 3 sections: MUST load first as it sets global vars-->
 	<script src="js/screen.js"></script>
 	<script src="js/language.js"></script>
+	<!-- start domrect early -->
+	<script src="js/domrect.js"></script>
 	<!-- faster sections -->
 	<script src="js/headers.js"></script>
 	<script src="js/media.js"></script>
@@ -828,8 +830,6 @@
 	<script src="js/fonts.js"></script>
 	<script src="js/canvas.js"></script>
 	<script src="js/audio.js"></script>
-	<!-- load last js -->
-	<script src="js/domrect.js"></script>
 
 	<!-- almost 500kb, load last -->
 	<link rel="stylesheet" type="text/css" href="css/window_size.css">
