--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -44,7 +44,7 @@
 			<iframe id="appLang_4"></iframe>
 		</div>
 		<!-- domrect -->
-		<div id="drect" class="offscreen"><iframe id="ifdr"></iframe></div>
+		<div id="drect" class="offscreen"></div>
 		<!-- default font size -->
 		<div class="offscreen">
 			<div class="normalized">
@@ -813,10 +813,10 @@
 	<a name="theend"></a><br>
 
 	<script src="js/main.js"></script>
-	<!-- first 3 sections: MUST load first as it sets global vars-->
+	<!-- first 3 sections: load first as it sets global vars-->
 	<script src="js/screen.js"></script>
-	<script src="js/language.js"></script>
 	<!-- faster sections -->
+	<script src="js/language.js"></script>
 	<script src="js/headers.js"></script>
 	<script src="js/media.js"></script>
 	<script src="js/devices.js"></script>
