--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -188,14 +188,12 @@
 			 &nbsp [feature detection] version</td><td class="c" id="versionNo"></td></tr>
 		<tr><td>[chrome://] os</td><td class="c" id="fdChromeOS"></td></tr>
 		<tr><td>[math] os</td><td class="c" id="fdMathOS"></td></tr>
-		<tr><td><div class="ttip"><span class="icon">[ i ]</span>
-			<span class="ttxtb">Linux, Mac or Windows</span></div> &nbsp [css] os <sup>1</sup></td>
-			<td><span id="fdCssOSL" style="font-family: Arimo, DejaVu Serif, ABR;">Linux</span>
-				<span id="fdCssOSM" style="font-family: Lucida Grande, ABR;">Mac</span>
-				<span id="fdCssOSW" style="font-family: Segoe UI, ABR;">Windows</span></td></tr>
-		<tr><td><div class="ttip"><span class="icon">[ i ]</span>
-			<span class="ttxtb">based on <b>[css] os</b> above</span></div>
-			&nbsp [font] os <sup>1</sup></td><td class="c" id="fontOS"></td></tr>
+		<tr><td><div class="ttip"><span class="icon">[ i ]</span><span class="ttxtb">Linux, Mac or Windows<br>
+			if <b>none</b> show = Android<br>if <b>all</b> show = fonts are blocked</span>
+			</div> &nbsp [css] os <sup>1</sup></td>
+			<td><span style="font-family: Arimo, DejaVu Serif, ABR;">Linux</span>
+				<span style="font-family: Lucida Grande, ABR;">Mac</span>
+				<span style="font-family: Segoe UI, ABR;">Windows</span></td></tr>
 		<tr><td>[css line-height] os</td><td class="c" id="cssLH"></td></tr>
 		<tr><td>[scrollbar width] os <sup>2, 3</sup></td><td class="c" id="scrollbarWidth"></td></tr>
 		<tr><td>[tcp/ip] os</td><td></td></tr>
