--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -795,6 +795,9 @@
 		<tr><td><div class="ttip"><span class="icon">[ i ]</span>
 			<span class="ttxtb">javascript.options.wasm</span></div>
 			&nbsp webassembly</td><td class="c" id="wasm"></td></tr>
+		<tr><td><div class="ttip"><span class="icon">[ i ]</span>
+			<span class="ttxt">dom.webshare.enabled</span></div>
+			&nbsp [api] web share</td><td class="c" id="webshare"></td></tr>
 	</table>
 
 	<!-- TABLE 99 -->
