--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -772,7 +772,9 @@
 				<div class="btn-left"><button class="btn18" onClick="outputSection(`18`, `c`, `m`)">[ re-run tests ]</button></div>
 				<div><div class="ttip"><span class="icon">[ i ]</span><span class="ttxt">beacon.enabled</span></div>
 				&nbsp [navigator] beacon</div></div></td><td class="c" id="nBeacon"></td></tr>
-		<tr><td>[navigator] clipboard</td><td class="c" id="nClipboard"></td></tr>
+		<tr><td><div class="ttip"><span class="icon">[ i ]</span>
+			<span class="ttxtb">dom.events.asyncClipboard</span></div>
+			&nbsp [api] clipboard</td><td class="c" id="nClipboard"></td></tr>
 		<tr><td><div class="ttip"><span class="icon">[ i ]</span>
 			<span class="ttxtb">dom.IntersectionObserver.enabled</span></div>
 			&nbsp [api] intersection observer</td><td class="c" id="intObserver"></td></tr>
@@ -789,6 +791,9 @@
 				</math>
 			</td>
 		</tr>
+		<tr><td><div class="ttip"><span class="icon">[ i ]</span>
+			<span class="ttxtb">dom.media.mediasession.enabled</span></div>
+			&nbsp [api] mediaSession</td><td class="c" id="mediaSession"></td></tr>
 		<tr><td><div class="ttip"><span class="icon">[ i ]</span>
 			<span class="ttxtb">dom.requestIdleCallback.enabled</span></div>
 			&nbsp requestIdleCallback</td><td class="c" id="reqIdleCB"></td></tr>
