--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -814,6 +814,7 @@
 				<label for="collapseZ" class="lbl-toggle" id="labelZ">&#9660; show debugging</label>
 		</th></tr></thead>
 		<tr class="togZ"><td>[section] perf</td><td class="mono" style="white-space: pre;" id="debug1"></td></tr>
+		<tr class="togZ"><td>[window/inner] matchMedia</td><td class="mono" style="white-space: pre;" id="debug2"></td></tr>
 	</table>
 
 	<a name="theend"></a><br>
