--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -776,6 +776,9 @@
 			<span class="ttxtb">dom.events.asyncClipboard</span></div>
 			&nbsp [api] clipboard</td><td class="c" id="nClipboard"></td></tr>
 		<tr><td><div class="ttip"><span class="icon">[ i ]</span>
+			<span class="ttxtb">dom.use_components_shim</span></div>
+			&nbsp component interfaces</td><td class="c mono" id="comshim"></td></tr>
+		<tr><td><div class="ttip"><span class="icon">[ i ]</span>
 			<span class="ttxtb">dom.IntersectionObserver.enabled</span></div>
 			&nbsp [api] intersection observer</td><td class="c" id="intObserver"></td></tr>
 		<tr><td><div class="ttip"><span class="icon">[ i ]</span>
