--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -816,7 +816,8 @@
 				<input id="collapseZ" class="toggle" type="checkbox" checked onchange="toggleitems(this, `Z`)">
 				<label for="collapseZ" class="lbl-toggle" id="labelZ">&#9660; show debugging</label>
 		</th></tr></thead>
-		<tr class="togZ"><td>[section] perf</td><td class="mono" style="white-space: pre;" id="debug1"></td></tr>
+		<tr class="togZ"><td>section perf</td><td class="mono" style="white-space: pre;" id="debug1"></td></tr>
+		<tr class="togZ"><td>tor browser detection points</td><td class="mono" style="white-space: pre;" id="debug2"></td></tr>
 	</table>
 
 	<a name="theend"></a><br>
