--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -725,6 +725,7 @@
 			</div>prefers-color-scheme</div></td><td class="c" id="pColorScheme"></td></tr>
 		<tr><td>prefers-reduced-motion</td><td class="c" id="pReducedMotion"></td></tr>
 		<tr><td>system colors</td><td class="c mono" id="sColorHash"></td></tr>
+		<tr><td>-moz- colors</td><td class="c mono" id="mColorHash"></td></tr>
 	</table>
 
 	<!-- TABLE 15: Ciphers / TLS - ciphers.js -->
