--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -452,6 +452,9 @@
 		<tr><td>[css] pointer</td><td id="cssP"></td></tr>
 		<tr><td>[css] any-pointer</td><td id="cssAP"></td></tr>
 		<tr><td><div class="ttip"><span class="icon">[ i ]</span>
+			<span class="ttxtb">media.webspeech.recognition.enable</span></div>
+			&nbsp speech recognition</td><td class="c" id="speechRec"></td></tr>
+		<tr><td><div class="ttip"><span class="icon">[ i ]</span>
 			<span class="ttxtb">media.webspeech.synth.enabled</span></div>
 			&nbsp speech synthesis</td><td class="c" id="speechSynth"></td></tr>
 		<tr><td>speech engines</td><td class="c" id="speechEngines"></td></tr>
