--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -65,6 +65,8 @@
 		<div class="hidden"><span id="sColorElement"></span></div>
 		<div class="themed" id="pColorElement"></div>
 		<div class="motion" id="pMotionElement"></div>
+		<!-- svg -->
+		<div class="offscreen" id="svgDiv"></div>
 
 	<table>
 	<tr><td><a anchor="top"></a><h2>TorZillaPrint</h2></td></tr>
@@ -804,6 +806,9 @@
 		<tr><td><div class="ttip"><span class="icon">[ i ]</span>
 			<span class="ttxtb">dom.requestIdleCallback.enabled</span></div>
 			&nbsp requestIdleCallback</td><td class="c" id="reqIdleCB"></td></tr>
+		<tr><td><div class="ttip"><span class="icon">[ i ]</span>
+			<span class="ttxt">svg.disabled</span></div>
+			&nbsp svg</td><td class="c" id="svgBasicTest"></td></tr>
 		<tr><td><div class="ttip"><span class="icon">[ i ]</span>
 			<span class="ttxtb">javascript.options.wasm</span></div>
 			&nbsp webassembly</td><td class="c" id="wasm"></td></tr>
