--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -69,7 +69,7 @@
 		<div class="offscreen" id="svgDiv"></div>
 
 	<table>
-	<tr><td><a anchor="top"></a><h2>TorZillaPrint</h2></td></tr>
+	<tr><td><a name="top"></a><h2>TorZillaPrint</h2></td></tr>
 	<tr><td class="blurb">TZP is only designed for Firefox <code>[<b>v60+</b>]</code> and the Tor Browser <code>[<b>v8+</b>]</code>.
 	<a target="_blank" class="blue" href="extra.html">Here</a> are additonal tests, and <a target="_blank" class="blue"
 	href="https://github.com/ghacksuserjs/TorZillaPrint">here</a> is the repo [feel free to drop in]. When re-testing
