--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -450,7 +450,6 @@
 			<span class="ttxtb">media.navigator.enabled</span></div>
 			&nbsp mediaDevices</td><td class="c" id="nMediaDevices"></td></tr>
 		<tr><td>enumerateDevices</td><td class="c" id="eMediaDevices"></td></tr>
-		<tr><td>[navigator] maxTouchPoints</td><td class="c" id="nMaxTouchPoints"></td></tr>
 		<tr><td>[css] pointer</td><td id="cssP"></td></tr>
 		<tr><td>[css] any-pointer</td><td id="cssAP"></td></tr>
 		<tr><td><div class="ttip"><span class="icon">[ i ]</span>
@@ -460,6 +459,9 @@
 			<span class="ttxtb">media.webspeech.synth.enabled</span></div>
 			&nbsp speech synthesis</td><td class="c" id="speechSynth"></td></tr>
 		<tr><td>speech engines</td><td class="c" id="speechEngines"></td></tr>
+		<tr><td><div class="ttip"><span class="icon">[ i ]</span>
+			<span class="ttxt">maxTouchPoints<br>ontouchstart<br>ontouchend<br>TouchEvent</span>
+			</div>&nbsp touch</td><td class="c" id="touch1"></td></tr>
 		<tr><td><div class="ttip"><span class="icon">[ i ]</span>
 			<span class="ttxt">dom.vr.enabled</span></div>
 			&nbsp [api] webvr</td><td class="c" id="nGetVR"></td></tr>
