--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -815,8 +815,8 @@
 			<span class="ttxtb">javascript.options.wasm</span></div>
 			&nbsp webassembly</td><td class="c" id="wasm"></td></tr>
 		<tr><td><div class="ttip"><span class="icon">[ i ]</span>
-			<span class="ttxtb">security.webauth.webauthn</span></div>
-			&nbsp [api] web authentication</td><td class="c" id="webauth"></td></tr>
+			<span class="ttxtb">security.webauth.webauthn<br>security.webauth.u2f</span></div>
+			&nbsp web authentication</td><td class="c" id="webauth"></td></tr>
 		<tr><td><div class="ttip"><span class="icon">[ i ]</span>
 			<span class="ttxt">dom.webshare.enabled</span></div>
 			&nbsp [api] web share</td><td class="c" id="webshare"></td></tr>
