--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -4,6 +4,9 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 	<title>TorZillaPrint</title>
 	<link rel="stylesheet" type="text/css" href="css/index.css">
+	<style id="test73">
+		.a{border-width: 1px; border-style: solid; border-color: black; border-image: linear-gradient(white,black);}
+	</style>
 	<script src="js/generic.js"></script>
 	<script src="js/globals.js"></script>
 </head>
@@ -21,6 +24,7 @@
 			<span id="spanLH" class="cssLH">line height</span>
 		</div>
 		<div class="hidden"><object id="obj68"></object></div>
+		<div class="hidden" id="test73"></div>
 		<img id="imageFS" width=0 height=0></img>
 		<!-- widget os -->
 		<div class="hidden">
@@ -770,7 +774,7 @@
 
 	<!-- TABLE 18: Miscellaneous - misc.js -->
 	<table id="tb18">
-		<col width="12%"><a name="misc"></a><col width="38%"><col width="50%">
+		<col width="10%"><a name="misc"></a><col width="40%"><col width="50%">
 		<thead><tr><th colspan="3">
 				<div class="nav-title"><a href="#misc">Miscellaneous</a>
 				<div class="nav-up"><a href="#spare2">&#9650;</a></div>
@@ -826,7 +830,7 @@
 				<input id="collapseM2" class="toggle" type="checkbox" checked onchange="toggleitems(this, `M2`)">
 				<label for="collapseM2" class="lbl-toggle" id="labelM2">&#9660; show details</label>
 		</td></tr>
-		<tr class="togM2"><td>components</td><td colspan="2" id="comshim2"></td></tr>
+		<tr class="togM2"><td>component</td><td colspan="2" id="comshim2"></td></tr>
 		<tr class="togM2"><td>navigator</td><td colspan="2" id="nProto2"></td></tr>
 	</table>
 
